styles/main.css
/* ... */
.posts-block {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: space-between;
    flex-wrap: wrap;
    margin-bottom: var(--text-size-large);
}

.posts-block .posts-latest {
    width: 100%;
    flex-grow: 0;
    flex-shrink: 0;
    max-width: 440px;
    max-width: calc(calc(var(--main-text-width-wide) / 2) - 5px);
    min-height: 250px;
    background-color: #c1ecd8;
    padding: var(--text-size-large);
    margin-bottom: 10px;
}

.posts-block .posts-latest:nth-child(1) {
    background-color: var(--color-post-1);
}

.posts-block .posts-latest:nth-child(2) {
    background-color: var(--color-post-2);
}

.posts-block .posts-latest:nth-child(3) {
    background-color: var(--color-post-3); 
}

.posts-block .posts-latest:nth-child(4) {
    background-color: var(--color-post-4);
}

.posts-block .posts-latest p {
    color: var(--text-color-tags);
    font-size: var(--text-size-xsmall);
    text-transform: uppercase;
    font-weight: 600;
    opacity: 0.75;
    margin-bottom: 0;
}

.posts-block .posts-latest h2 a {
    color: var(--text-color-tags);
    /* text-decoration: underline; */
}

.posts-block .posts-latest h2 a:hover {
    text-decoration: underline;
}

.posts-block .posts-latest h2 {
    font-size: var(--text-size-medium);
    margin-top: 0;
}

#writing main h1, .similar {
    width: var(--main-text-width);
    margin-left: auto;
    margin-right: auto;
}

#writing main .posts-list-item h2 {
    font-size: var(--text-size-large);;
    margin-top: 0em;
    margin-bottom: 0.25em;
}

.posts-block .posts-latest p.categories {
    margin-top: 0.5em;
}

.posts-block .posts-latest p.categories span {
    margin-right: 1em;
}

/* ---- CTA LINK ---- */
.cta-link {
    max-width: var(--main-text-width);
    margin-left: auto;
    margin-right: auto;
    margin-top: 60px;
    font-size: var(--text-size-small);
    text-transform: uppercase;
    font-weight: 600;
}

.cta-link a {
    padding-bottom: 8px;
    border-width: 3px;
    color: var(--text-color);
    border-color: var(--text-color);
    letter-spacing: 0.5px;
}

.cta-link a:hover {
    border-bottom: 3px solid var(--text-color);
    color: var(--red);
    animation: none;
}

.cta-link a:hover:before {
    height: 3px;
    bottom: -3px;
}

/* ---- PATREON ---- */
.patreon {
    display: block;
    width: 100%;
    max-width: var(--main-text-width-wide);
    /* border-radius: 3px; */
    background-color: var(--color-post-4);
    padding: var(--text-size-large);
    padding-left: calc(var(--text-size-large) * 3.5);
    background-image: url("/static/icons/patreon.png");
    background-size: auto 50%;
    background-position: left var(--text-size-large) center;
    background-repeat: no-repeat;
    position: relative;
    font-weight: 600;
    border: none;
    margin-top: 1.5em;
    color: var(--text-color-tags);
}

.patreon:after {
    content: "→";
    margin-left: 0.5em;
}

.patreon:hover:before {
    height: 0;
}

.patreon:hover:after {
    margin-left: 1em;
    transition: 0.5s;
}

.patreon:hover {
    color: var(--text-color-tags);
    border: none;
    background-color: var(--color-post-3);
}

#post main .wide .patreon {
    margin-bottom: -1em;
}

/* ---- ARCHIVE ---- */
#archive main h1, #writing main h1, .similar {
    font-size: var(--text-size-small);
    text-transform: uppercase;
    font-weight: 600;
}

.post-list .posts-list-item {
    padding: 1.5em 0;
    border-bottom: 1px solid var(--text-color-transparent);
    position: relative;
    max-width: var(--main-text-width);
    margin-left: auto;
    margin-right: auto;
}

.post-list .posts-list-item:last-child  {
    border-bottom: none;
}

.post-list .posts-list-item a {
    text-decoration: underline;
    text-decoration-thickness: 1.5px;
}

.post-list .posts-list-item a:hover {
    text-decoration: none;
}

.post-list .posts-list-item p {
    color: var(--text-color);
    margin-bottom: 0;
    font-size: var(--text-size-small);
    text-transform: uppercase;
    font-weight: 600;
}

.post-list .posts-list-item p.categories {
    font-size: var(--text-size-xsmall);
}

.post-list .posts-list-item p span {
    margin-right: 1em;
}

.post-list .posts-list-item h2 {
    margin-top: 0.25em;
    margin-bottom: 0.25em;
}


/* ---- POSTS PAGE ---- */
#post main pre, #post main iframe, #post main img {
    margin-bottom: 1.5em;
}


#post main pre {
    overflow-x: scroll;
    color: var(--text-color-blocks);
    background-color: var(--code-block-bg);

    width: 100%;
    width: var(--main-text-width-wide);
    position: relative;
    left: -117px;
    padding: 1em 1.5em;
    box-sizing: border-box;
}

#post main pre code {
    font-size: var(--text-size-small);
    white-space: pre-wrap;
}

.wide {
    width: 100%;
    width: var(--main-text-width-wide);
    position: relative;
    left: -117px;
    padding: 0;
}

#post main h2, #post main h3, #post main h4, #post main h5 {
    font-weight: 600;
    margin-bottom: 1.5em;
    margin-top: 1.5em;
}

#post main .posts-block .posts-latest h2 {
    margin: 0;
}

#post main h2 {
    font-size: 1.35em;
}

#post main *:not(pre) code {
    background-color: var(--code-block-bg);
    color: var(--text-color-blocks);
    font-size: var(--text-size-small);
    padding: 0.25em;
}

#post main ul, #post main ol {
    margin-bottom: 1.5em;
    margin-left: 1em;
}

#post main ul li, #post main ol li {
    margin-bottom: 0.5em;
}
#post main ul li ul, #post main ol li ul, #post main ol li ol, #post main ul li ol {
    margin-top: 0.5em;
}

#post main hr {
    margin: 4em 0;
    border: 0;
    border-top: 1px solid var(--text-color-transparent);
}

#post main .cta-link {
    margin-bottom: calc(var(--text-size-large) * 2);
}
/* ... */

